# lightgbm-benchmark

./: .coveragerc  .gitignore  404.html  CMakeLists.txt  Exploration.ipynb  README.md  index.html  mkdocs.yml  objects.inv  requirements.txt  simple_example.sh  sitemap.xml
.github/workflows/: azureml_pipelines.yml  benchmark_run.yml  benchmark_scripts.yml  codeql-analysis.yml  component_release.yml  docker_images.yml  docs.yml
conf/compute/: custom.yaml
conf/experiments/: data-generation.yaml  lightgbm-inferencing-prod.yaml  lightgbm-inferencing.yaml
conf/experiments/benchmarks/: lightgbm-inferencing.yaml  training-cpu-num-trees.yaml  training-cpu-vs-gpu.yaml
conf/experiments/lightgbm_training/: cpu-custom.yaml  cpu.yaml  gpu.yaml  mpi.yaml  ray.yaml  raytune.yaml  raytune_distributed.yaml  sweep.yaml
contribute/architecture-guide/: index.html
contribute/developer-guide/: index.html
contribute/reporting-guide/: index.html
data/sample/: unittests-regression-test.yml  unittests-regression-train.yml
docker/: lightgbm_v3_3_0_linux_cpu_mpi_build.dockerfile
docker/lightgbm-custom/: v321_patch_cpu_mpi_build.dockerfile  v330_patch_cpu_mpi_build.dockerfile  v333_patch_cpu_mpi_build.dockerfile
docker/lightgbm-v3.2.1/: linux_cpu_mpi_build.dockerfile  linux_cpu_mpi_pip.dockerfile  linux_cuda_build.dockerfile  linux_gpu_build.dockerfile  linux_gpu_pip.dockerfile  windows_cpu_pip.dockerfile
docker/lightgbm-v3.3.0/: linux_cpu_mpi_build.dockerfile  linux_cpu_mpi_pip.dockerfile  windows_cpu_build.dockerfile  windows_cpu_pip.dockerfile
docker/lightgbm-v3.3.3/: linux_cpu_mpi_build.dockerfile  linux_cpu_mpi_pip.dockerfile  windows_cpu_pip.dockerfile
docs/: AzureML-CLI20-benchmark.md  Benchmark-project.md  Developer-guide.md  Install.md  Manual-benchmark.md  Reporting-guide.md  lightgbm-benchmark-project.md
docs/contribute/: architecture-guide.md  developer-guide.md  reporting-guide.md
docs/quickstart/: azureml-benchmark.md  azureml-cli20-benchmark.md  install.md  manual-benchmark.md
docs/references/common/: aml.md  components.md  io.md  lightgbm.md  lightgbm_utils.md  metrics.md  perf.md  sweep.md  tasks.md
docs/results/: inferencing.md  latest.md
docs/run/: install.md  manual-benchmark.md
docs/run/azureml/: azure-setup.md  benchmark-inferencing.md  designer-ui.md  generate-synthetic-data.md  local-setup.md  setup.md  train-on-your-data.md  train-on-your-own-data.md  upload-data.md  upload-your-data.md
docs/tutorials/: create-azureml-component.md  create-script.md
lightgbm-benchmark-project/: index.html
pipelines/azureml/pipelines/: data_generation.py  lightgbm_distributed.py  lightgbm_e2e_synthetic.py  lightgbm_inferencing.py  lightgbm_training.py
pipelines/azureml_cli20/: inference_data.yml  score.yml
pipelines/azureml_cli20/components/: lightgbm_python_score.yml
pipelines/azureml_cli20/pipelines/: score_ab.yml
pipelines/azureml_sdk15/components/: lightgbm_custom.dockerfile  lightgbm_python_score_spec.additional_includes  lightgbm_python_score_spec.yaml  lightgbm_python_train_spec.yaml  treelite_python_score_spec.yaml
pipelines/azureml_sdk15/pipelines/: benchmark.py  lightgbm_a_vs_b.py  lightgbm_e2e_synthetic.py
references/common/aml/: index.html
references/common/components/: index.html
references/common/io/: index.html
references/common/lightgbm_utils/: index.html
references/common/metrics/: index.html
references/common/perf/: index.html
references/common/tasks/: index.html
results/inferencing/: index.html
results/manual/: index.html
run/azureml/azure-setup/: index.html
run/azureml/benchmark-inferencing/: index.html
run/azureml/benchmark-training/: index.html
run/azureml/designer-ui/: index.html
run/azureml/generate-synthetic-data/: index.html
run/install/: index.html
run/manual-benchmark/: index.html
search/: search_index.json
src/binaries/: CMakeLists.txt  README.md
src/binaries/common/: custom_loader.cpp  custom_loader.hpp
src/binaries/lightgbm_predict/: CMakeLists.txt  README.md  main.cc
src/binaries/lightgbm_predict_telemetry/: main.cc
src/common/: aml.py  components.py  data.py  distributed.py  io.py  lightgbm.py  lightgbm_utils.py  math.py  metrics.py  paths.py  perf.py  pipelines.py  ray.py  raytune_param.py  sweep.py  tasks.py
src/pipelines/: score.yml
tests/: conftest.py
tests/aml/: test_components.py
tests/common/: test_aml.py  test_component.py  test_data.py  test_distributed.py  test_io.py  test_lightgbm_utils.py  test_math.py  test_metrics.py  test_perf.py  test_pipelines.py  test_raytune.py  test_sweep.py
tests/pipelines/: test_data_generation.py  test_lightgbm_inferencing.py  test_lightgbm_training.py
tests/scripts/: test_e2e_manual.py  test_generate_data.py  test_inferencing_custom_win_cli.py  test_lightgbm_data2bin.py  test_lightgbm_inferencing_c_api.py  test_lightgbm_inferencing_ray.py  test_lightgbm_python.py  test_partition_data.py  test_sample_sample.py  test_training_lightgbm_ray.py  test_training_raytune.py  test_treelite_python.py
(+162 files in other folders)
